--- a/codingExamplesJS/example2_simpleCalculator.html
+++ b/codingExamplesJS/example2_simpleCalculator.html
@@ -8,6 +8,7 @@
 <body>
     <!-- Entradas para os números e botões para executar operações -->
     <input type="number" id="firstNumber" placeholder="Digite o primeiro número"> <!-- Campo para inserir o primeiro número -->
+    <input type="number" id="secondNumber" placeholder="Digite o segundo número"> <!-- Campo para inserir o segundo número -->
     
 </body>
 </html>
