--- a/codingExamplesJS/example2_simpleCalculator.html
+++ b/codingExamplesJS/example2_simpleCalculator.html
@@ -9,6 +9,8 @@
     <!-- Entradas para os números e botões para executar operações -->
     <input type="number" id="firstNumber" placeholder="Digite o primeiro número"> <!-- Campo para inserir o primeiro número -->
     <input type="number" id="secondNumber" placeholder="Digite o segundo número"> <!-- Campo para inserir o segundo número -->
+    <button onclick="calculate('add')">Adicionar</button> <!-- Botão para adicionar adição -->
+    <button onclick="calculate('subtract')">Subtrair</button> <!-- Botão para subtração --> 
     
 </body>
 </html>
