--- a/codingExamplesJS/example2_simpleCalculator.html
+++ b/codingExamplesJS/example2_simpleCalculator.html
@@ -11,6 +11,17 @@
     <input type="number" id="secondNumber" placeholder="Digite o segundo número"> <!-- Campo para inserir o segundo número -->
     <button onclick="calculate('add')">Adicionar</button> <!-- Botão para adicionar adição -->
     <button onclick="calculate('subtract')">Subtrair</button> <!-- Botão para subtração --> 
-    
+    <button onclick="calculate('multiply')">Multiplicar</button> <!-- Botão para multiplicação -->
+    <button onclick="calculate('divide')">Dividir</button> <!-- Botão para dividir -->
+
+    <!-- Script JavaScript -->
+    <script>
+        // Função para realizar cálculos básicos
+        function calculate(operation) {
+            var firstNumber = parseFloat(document.getElementById("firstNumber").value); // Obtém o valor do primeiro número
+            var secondNumber = parseFloat(document.getElementById("secondNumber").value); // Obtém o valor do segundo número
+            var result;
+        }
+    </script>
 </body>
 </html>
