--- a/codingExamplesJS/example13_jogoAdvinhacao.html
+++ b/codingExamplesJS/example13_jogoAdvinhacao.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo da Adivinhação</title>
+    <title>Jogo da Adivinhação com JavaScript</title>
 </head>
+
 <body>
     <!-- Jogo para adivinhar um número entre 1 e 100 -->
     <p>Adivinhe o número entre 1 e 100:</p>
     <input type="number" id="numeroAdivinhacao">
-    <button onclick="VerificarNumero()">Adivinhar</button>
-    <p id="MensagemResultado"></p>
+    <button onclick="verificarNumero()">Adivinhar</button>
+    <p id="mensagemResultado"></p>
 
     <!-- Script JavaScript -->
     <script>
-        var numeroSecreto = Math.floor(Math.random() * 100) + 1; // Gera um número aleatório entre 1 e 100
+        var numeroSecreto = Math.floor(Math.random() * 100) + 1;  // Gera um número aleatório entre 1 e 100
 
-        // 
+        // Função para verificar se o número fornecido é o número secreto
+        function verificarNumero() {
+            var palpite = parseInt(document.getElementById("numeroAdivinhacao").value);  // Obtém o número inserido pelo usuário
+
+            // Compara o palpite do usuário com o número secreto
+            if (palpite === numeroSecreto) {
+                document.getElementById("mensagemResultado").innerText = "Parabéns! Você acertou!";
+            } else if (palpite < numeroSecreto) {
+                document.getElementById("mensagemResultado").innerText = "Tente um número maior!";
+            } else {
+                document.getElementById("mensagemResultado").innerText = "Tente um número menor!";
+            }
+        }
     </script>
 </body>
+
 </html>
