--- a/codingExamplesJS/example17_animacaoMovimento.html
+++ b/codingExamplesJS/example17_animacaoMovimento.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animação de Movimento com JavaScript</title>
+    <style>
+        #objetoAnimado {
+            width: 50px;
+            height: 50px;
+            background-color: blue;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
     
