--- a/codingExamplesJS/example17_animacaoMovimento.html
+++ b/codingExamplesJS/example17_animacaoMovimento.html
@@ -16,6 +16,12 @@
     </style>
 </head>
 <body>
-    
+    <div id="objetoAnimado"></div>
+
+    <!-- Script JavaScript -->
+    <script>
+        var objeto = document.getElementById("objetoAnimado");
+    </script>
+
 </body>
 </html>
