--- a/codingExamplesJS/example22_listaCompras.html
+++ b/codingExamplesJS/example22_listaCompras.html
@@ -6,6 +6,10 @@
     <title>Lista de Compras com JavaScript</title>
 </head>
 <body>
+    <input type="text" id="item" placeholder="Item de compra">
+    <button onclick="adicionarItem()">Adicionar</button>
+    <ul id="listaCompras"></ul>
+
     
 </body>
 </html>
