--- a/codingExamplesJS/example21_conversorMoeda.html
+++ b/codingExamplesJS/example21_conversorMoeda.html
@@ -16,7 +16,7 @@
     <script>
         var taxaConversaoDolar = 5.20; // Supondo uma taxa de conversão fixa para simplificar
 
-        // Função para converter o valor em reais para dólar
+        // FunFção para converter o valor em reais para dólar
         function converterParaDolar() {
             var valorReais = parseFloat(document.getElementById("valor").value);
             var valorDolar = valorReais / taxaConversaoDolar;
