--- a/codingExamplesJS/example50_listaDeComprasDinamica.html
+++ b/codingExamplesJS/example50_listaDeComprasDinamica.html
@@ -13,6 +13,14 @@
     <!-- Script JavaScript -->
     <script>
         // Função para adicionar um novo item à lista de compras
+        function adicionarItem() {
+            var item = document.getElementById("itemDeCompra").value;
+            if (item.trim() === '') {
+                alert('Por favor, insira um item válido!');
+                return;
+            }
+            
+        }
     </script>
 </body>
 </html>
