--- a/codingExamplesJS/example51_jogoDaVelhaSimples.html
+++ b/codingExamplesJS/example51_jogoDaVelhaSimples.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
         .celula {
             width: 60px;
             height: 60px;
-            border: 1px; solid-black;
+            border: 1px solid-black;
             display: inline-block;
             font-size: 2em;
             text-align: center;
@@ -16,6 +17,7 @@
         }
     </style>
 </head>
+
 <body>
     <div id="jogoDaVelha">
         <!-- 9 células do jogo da velha -->
@@ -29,7 +31,7 @@
         <div class="celula" onclick="marcar(this)"></div>
         <div class="celula" onclick="marcar(this)"></div>
     </div>
-    
+
     <!-- Script JavaScript -->
     <script>
         let jogadorAtual = 'X';
@@ -43,4 +45,5 @@
         }
     </script>
 </body>
+
 </html>
