--- a/codingExamplesJS/example6_listaDeTarefas.html
+++ b/codingExamplesJS/example6_listaDeTarefas.html
@@ -23,7 +23,7 @@
             if (tarefa) { // Verifica se a tarefa não está vazia
                 var lista = document.getElementById("listaDeTarefas"); // Seleciona a lista de tarefas
                 var itemLista = document.createElement("li"); // Cria um novo item de lista
-                itemLista.innerText = tarefa;  // Define o texto do item de lista como a tarefa inserida
+                itemLista.innerText = tarefa;  // Define o texto do item de lista como tarefa inserida
                 lista.appendChild(itemLista);  // Adiciona o item de lista à lista de tarefas
                 document.getElementById("novaTarefa").value = '';  // Limpa o campo de entrada
             }
